Problem with quickeffect cell fracture #85632

Closed
opened 2021-02-14 17:59:05 +01:00 by Ivan Ćosić · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.90

Blender Version
Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177
Worked: (newest version of Blender that worked as expected)

Short description of error
If I do a quickeffect cell fracture with Suzana (monkey) something is not working properly. As far as I can see, it works properly with other objects, but I have problems with it. Look at the picture?

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

image.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.90 **Blender Version** Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` Worked: (newest version of Blender that worked as expected) **Short description of error** If I do a quickeffect cell fracture with Suzana (monkey) something is not working properly. As far as I can see, it works properly with other objects, but I have problems with it. Look at the picture? **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] ![image.png](https://archive.blender.org/developer/F9801298/image.png)
Author

Added subscriber: @PredatorHall

Added subscriber: @PredatorHall
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

This is because Suzanne is a non-manifold mesh (it has holes where the eyes are)
https://docs.blender.org/manual/en/latest/glossary/index.html#term-Non-manifold

The boolean modifier which is used internally does not like these
https://docs.blender.org/manual/en/latest/modeling/modifiers/generate/booleans.html

So this is not nice, but expected, it is a documentated limitation of the current system.
Think we have to close this, but thx reporting anyways!

This is because Suzanne is a non-manifold mesh (it has holes where the eyes are) https://docs.blender.org/manual/en/latest/glossary/index.html#term-Non-manifold The boolean modifier which is used internally does not like these https://docs.blender.org/manual/en/latest/modeling/modifiers/generate/booleans.html So this is not nice, but expected, it is a documentated limitation of the current system. Think we have to close this, but thx reporting anyways!

Added subscribers: @howardt, @Limarest

Added subscribers: @howardt, @Limarest

The actual reason why Cell Fracture fails since 2.91 is because of the Exact boolean mode set by default. In the attached video you can see that if I enable debug boolean checkbox and manually set the boolean type back to fast, pieces behave as they should. Can we reopen this bug @lichtwerk and maybe ask @howardt to look into it? QmN0HnMYPT.mp4

Exact steps to repro:

  1. Add Suzanne
  2. Choose Cell Fracture
  3. Enable debug boolean so that boolean modifier would not apply automatically
  4. Choose failed boolean piece and change boolean type from exact to fast
The actual reason why Cell Fracture fails since 2.91 is because of the Exact boolean mode set by default. In the attached video you can see that if I enable debug boolean checkbox and manually set the boolean type back to fast, pieces behave as they should. Can we reopen this bug @lichtwerk and maybe ask @howardt to look into it? [QmN0HnMYPT.mp4](https://archive.blender.org/developer/F9873348/QmN0HnMYPT.mp4) Exact steps to repro: 1. Add Suzanne 2. Choose Cell Fracture 3. Enable debug boolean so that boolean modifier would not apply automatically 4. Choose failed boolean piece and change boolean type from exact to fast
Member

Seems like a design choice (rather than a bug) to me.

  • If the Exact method is generally of better quality, then there could be situations were Cell Fracture actually improved compared to pre 2.91?
  • or can we be sure that Cell Fracture will always benefit from having it set to Fast?
Seems like a design choice (rather than a bug) to me. - If the `Exact` method is generally of better quality, then there could be situations were Cell Fracture actually improved compared to pre 2.91? - or can we be sure that Cell Fracture will always benefit from having it set to `Fast`?
Member

I am looking at this. I think the new method I am using to decide inside/outside could use some tweaking. There are cases where the Fast's inside/outside test will fail on a boolean like Cell Fracture, though clearly this isn't one of them.

I am looking at this. I think the new method I am using to decide inside/outside could use some tweaking. There are cases where the Fast's inside/outside test will fail on a boolean like Cell Fracture, though clearly this isn't one of them.

This issue was referenced by b30f89918e

This issue was referenced by b30f89918ee16ae3473faa2cfaa5c843b012d878
Member

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Member

I tweaked the threshold used to decide "insideness" when meshes are non-manifold and the operation is Intersect. It now works in the Suzanne case.

I tweaked the threshold used to decide "insideness" when meshes are non-manifold and the operation is Intersect. It now works in the Suzanne case.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85632
No description provided.